{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 73,
  "lineage": "7d14e719-b7ff-c709-baaa-ef474dc3dbe2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:790237720477:loadbalancer/web-elb",
            "availability_zones": [
              "eu-west-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "web-elb-1951571418.eu-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "web-elb",
            "idle_timeout": 60,
            "instances": [
              "i-01486719b4286cce3",
              "i-0c6fd565f6880986b"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "web-elb",
            "security_groups": [
              "sg-0460b853df6e8ecb2"
            ],
            "source_security_group": "790237720477/web_inbound",
            "source_security_group_id": "sg-0460b853df6e8ecb2",
            "subnets": [
              "subnet-001fe7a92ed6c8424"
            ],
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_security_group.web_host_sg",
            "aws_security_group.web_inbound_sg",
            "module.vpc_basic.aws_subnet.public",
            "module.vpc_basic.aws_vpc.tfb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-050b8344d77081f4b",
            "arn": "arn:aws:ec2:eu-west-2:790237720477:instance/i-0c6fd565f6880986b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c6fd565f6880986b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "LondonInstance",
            "monitoring": false,
            "primary_network_interface_id": "eni-0466a9e49f05b5393",
            "private_dns": "ip-10-0-1-20.eu-west-2.compute.internal",
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-18-130-209-76.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.209.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a8a88cee2d581360",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001fe7a92ed6c8424",
            "tags": {
              "Name": "web-001",
              "Owner": "team1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b542d5ffe49d4934"
            ]
          },
          "dependencies": [
            "aws_security_group.web_host_sg",
            "module.vpc_basic.aws_subnet.public",
            "module.vpc_basic.aws_vpc.tfb"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-050b8344d77081f4b",
            "arn": "arn:aws:ec2:eu-west-2:790237720477:instance/i-01486719b4286cce3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01486719b4286cce3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "LondonInstance",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ad8f0a0b08297229",
            "private_dns": "ip-10-0-1-21.eu-west-2.compute.internal",
            "private_ip": "10.0.1.21",
            "public_dns": "ec2-3-8-100-118.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.100.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08d5586a7a8c87a2d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001fe7a92ed6c8424",
            "tags": {
              "Name": "web-002",
              "Owner": "team2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b542d5ffe49d4934"
            ]
          },
          "dependencies": [
            "aws_security_group.web_host_sg",
            "module.vpc_basic.aws_subnet.public",
            "module.vpc_basic.aws_vpc.tfb"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_basic",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tfb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-07e7f6a5bea3d727f",
            "owner_id": "790237720477",
            "tags": {
              "Name": "web-igw"
            },
            "vpc_id": "vpc-0f8786afd1a76bf65"
          },
          "dependencies": [
            "module.vpc_basic.aws_vpc.tfb"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_basic",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07e7f6a5bea3d727f",
            "id": "r-rtb-002816f0dbd03f0ab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-002816f0dbd03f0ab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc_basic.aws_internet_gateway.tfb",
            "module.vpc_basic.aws_vpc.tfb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_host_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:790237720477:security-group/sg-0b542d5ffe49d4934",
            "description": "Allow SSH \u0026 HTTP to web hosts",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b542d5ffe49d4934",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_host",
            "name_prefix": null,
            "owner_id": "790237720477",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0f8786afd1a76bf65"
          },
          "dependencies": [
            "module.vpc_basic.aws_vpc.tfb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_inbound_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:790237720477:security-group/sg-0460b853df6e8ecb2",
            "description": "Allow HTTP from Anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0460b853df6e8ecb2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "web_inbound",
            "name_prefix": null,
            "owner_id": "790237720477",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0f8786afd1a76bf65"
          },
          "dependencies": [
            "module.vpc_basic.aws_vpc.tfb"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_basic",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:790237720477:subnet/subnet-001fe7a92ed6c8424",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-001fe7a92ed6c8424",
            "map_public_ip_on_launch": true,
            "owner_id": "790237720477",
            "tags": {
              "Name": "web-public"
            },
            "vpc_id": "vpc-0f8786afd1a76bf65"
          },
          "dependencies": [
            "module.vpc_basic.aws_vpc.tfb"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_basic",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tfb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:790237720477:vpc/vpc-0f8786afd1a76bf65",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05d7ff2bd123bd391",
            "default_route_table_id": "rtb-002816f0dbd03f0ab",
            "default_security_group_id": "sg-0c938bec201be5512",
            "dhcp_options_id": "dopt-2d1d4e45",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f8786afd1a76bf65",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-002816f0dbd03f0ab",
            "owner_id": "790237720477",
            "tags": {
              "Name": "web"
            }
          }
        }
      ]
    }
  ]
}